two tests added

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
 [pytest]
-pythonpath = src #Where Python files are located
-testpaths = tests #Where tests are located
-python_files = tests.py #Which files are tests
-addopts=--tb=native --cov=src --cov-report term-missing -v #Additional options
+#Where Python files are located
+pythonpath = src 
+#Where tests are located
+testpaths = tests 
+#Which files are tests
+python_files = tests.py 
+#Additional options
+addopts=--tb=native --cov=src --cov-report term-missing -v 
