deploy terraform added

--- a/.github/workflows/destroy-tf.yaml
+++ b/.github/workflows/destroy-tf.yaml
@@ -1,9 +1,9 @@
 name: Terraform destroy
 
 on:
-  push:
-  pull_request:
-    types: [approved, opened, edited, reopened]
+  # push:
+  # pull_request:
+  #   types: [approved, opened, edited, reopened]
   workflow_dispatch:
 
 jobs: 
